--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,8 +48,8 @@ jobs:
         run: poetry install --no-interaction
 
       - name: Setup flake8 annotations
-        # uses: rbialon/flake8-annotations@v1
-        uses: reviewdog/action-setup@v1
+        if: ${{ github.event_name == 'pull_request' }}
+        uses: rbialon/flake8-annotations@v1
           
       - name: Run unit tests
         run: poetry run nox -rs tests
