--- a/{{cookiecutter.project_slug}}/.gitignore
+++ b/{{cookiecutter.project_slug}}/.gitignore
@@ -130,3 +130,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Ignore DevSpace cache and log folder
+.devspace/
+
+# Ignore any kubeconfig that might be created locally
+kubeconfig.yaml
