--- a/{{cookiecutter.hyphenated}}/pyproject.toml
+++ b/{{cookiecutter.hyphenated}}/pyproject.toml
@@ -1,4 +1,5 @@
 [tool.poetry]
+version = "0.1.0"
 authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
 description = "Top-level package for {{ cookiecutter.project_name }}."
 name = "{{cookiecutter.hyphenated}}"
