--- a/{{cookiecutter.hyphenated}}/catalog-info.yaml
+++ b/{{cookiecutter.hyphenated}}/catalog-info.yaml
@@ -10,5 +10,5 @@ metadata:
     backstage.io/techdocs-ref: dir:.
 spec:
   type: service
-  owner: {{ cookiecutter.team }}
+  owner: {{ cookiecutter.github_owner }}
   lifecycle: experimental
